# agentic-quotation-system

./: .containerignore  .gitignore  README.md  agent_tools.py  exceptions.py  langgraph.json  log_in_manager.py  main_agent.py  podman-compose.yml  prompts.py  providers.py  pyproject.toml  utils.py
backend/: .env.example  README.md  launch_backend.py  pyproject.toml  setup_backend.py
backend/alembic_template/alembic/: env.py
backend/src/backend/: __main__.py  config.py  launch_backend.py
backend/src/backend/agent/: agent_tools.py  main_agent.py  prompts.py
backend/src/backend/agent/history/: message_adapter.py
backend/src/backend/backend_utils/browser/: __init__.py  chrome_bridge.py  context_manager.py  login_service.py  login_strategy.py
backend/src/backend/backend_utils/common/: __init__.py  dictionaries.py  exceptions.py  lists.py
backend/src/backend/backend_utils/computer_use/: __init__.py  configuration.py  custom.py  functions.py  parsing.py  runner.py  session.py
backend/src/backend/backend_utils/connection/: connection_manager.py
backend/src/backend/backend_utils/events/: dispatcher.py  emitter.py  handler.py  login_waiter.py  parser.py  unpacker.py
backend/src/backend/backend_utils/exceptions/: __init__.py  login_failed.py  manual_fallback.py  ui_login.py
backend/src/backend/backend_utils/security/: db_security.py
backend/src/backend/backend_utils/signals/: login_failed.py  login_required.py
backend/src/backend/background/: db_cleanup.py
backend/src/backend/database/: base.py  engine.py
backend/src/backend/database/actions/: client_touch.py  job_touch.py
backend/src/backend/database/models/: __init__.py  browser_context.py  chat.py  client.py  credential.py  job.py  login_attempt.py  login_context.py  message.py
backend/src/backend/database/repositories/: __init__.py  browser_context_repo.py  chat_repo.py  client_repo.py  credential_repo.py  credentials_repo.py  job_repo.py  login_context_repo.py  message_repo.py
backend/src/backend/provider/: base_provider.py  registry.py
backend/src/backend/provider/providers/: __init__.py  comet.py  gruppo_comet.py  providers.py
backend/src/backend/server/: rest_server.py  websocket_agent_server.py  websocket_server.py
frontend/: .env.example  LICENSE  README.md  launch_frontend.py  pyproject.toml  setup_frontend.py
frontend/src/frontend/: __main__.py  config.py  launch_frontend.py
frontend/src/frontend/frontend_utils/browser/: manual_login.py
frontend/src/frontend/ui/: agent_ui.py
scripts/: setup_venvs.sh  (+1 more)
shared/: README.md  pyproject.toml
shared/src/shared/events/: __init__.py  auth.py  auth_events.py  chat.py  chat_events.py  clean.py  clear.py  credentials.py  error.py  init.py  job_status.py  login.py  metadata.py  transport.py  utils.py
shared/src/shared/exceptions/: __init__.py  provider_not_supported.py
shared/src/shared/playwright/: captcha_detection.py  page_utilities.py  waiter.py
shared/src/shared/provider/: base_provider.py  registry.py
(+50 files in other folders)
