
[project]
name = "agentic-quotation-system"
version = "0.0.1"
description = "An agentic system to support the preparation of quotations by searching the desider items from the web."
authors = [
    {name = "Enrico F. Contessi", email = "enricocontessi03@gmail.com"}
]
requires-python = ">=3.11,<3.14"
dependencies = [
    "langchain>=1.0.0",
    "langgraph>=1.0.0",
    "langchain-google-genai>=3.0.0",
    "bs4>=0.0.2",
    "playwright>=1.55.0",
    "requests>2.32.0",
    
]