
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-shared"
version = "0.1.0"
description = "Agentic quotation system's shared resources"
requires-python = ">=3.13,<3.14"

authors = [
    { name = "Enrico Francesco Contessi" }
]

dependencies = [
    "pydantic==2.12.2"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]